# PressF

./: CMakeLists.txt  Makefile  README.md  a.out  backtracking.c  check.c  error.c  fillit  fillit.h  fillit.h.gch  main.c  main.cpp  main.h  map.c  qwe.c  readfile.c  sample.fillit
includes/: ft_printf.h
libft/: Makefile  ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_putchar.c  ft_putstr.c  ft_strcmp.c  ft_strnew.c
libft/includes/: libft.h
srcs/: adress.c  check.c  float.c  ft_printf.c  hex.c  parser.c  prec.c  print_number.c  print_o.c  print_x.c  string.c
